// ============================================================
// Argus(FixGuide) — 부품 교체 요청·승인 시스템
// ERD (dbdiagram.io DBML)  — CONTRACT.md v3.0 §5 "DB — 테이블 7개 + 제안 1개" 그대로 옮김
// 팀 「FixGuide 데이터 모델 정의서 v3.0」이 권위 문서. 이 파일은 그 설계의 번역이며 창작이 아니다.
// 테이블 8개: users, work_requests, work_request_photos, agent_runs, agent_steps,
//   agent_results, approvals, ai_configs([제안])
// N:M 은 이번 범위에 없음(팀 ERD 명시) — 9절 "Phase 2 예비 설계"에 미리 그려 둠(erd.md 참조)
// ============================================================

Project Argus {
  database_type: 'PostgreSQL'
  Note: '''
    부품 교체 요청·승인 시스템(FixGuide/Argus, 명칭 미확정 — CONTRACT §0 각주).
    설계 원칙 5가지(CONTRACT §5 원문):
    1) 대리키 PK — 전 테이블 UUID v4. 업무 식별자(users.email, work_requests.request_no,
       agent_steps/agent_results 의 (run_id, agent_code))는 UNIQUE 로만 보장.
    2) 사실/추론/행동 분리 — 입력(work_requests) · AI 산출(agent_runs/agent_steps/agent_results) ·
       사람의 결정(approvals)을 테이블로 분리. 위 층이 아래 층을 덮어쓰지 않는다.
    3) append-only 이력 — agent_runs(재실행), approvals(재제출 후 재결정)는 갱신하지 않고 행을 추가한다.
    4) jsonb 는 구조가 가변인 곳에만 — operating_condition, spec_json, payload_json(+원본 보존용 original_json).
       조회·집계 키(status, agent_code, reason_category, edited)는 컬럼으로 승격.
    5) 상태는 PostgreSQL enum(룩업 테이블 아님).
    이번 범위는 마스터(설비·부품·법령) 없이 work_requests 컬럼(equipment/line/substance 등 varchar)으로
    직접 받는다 — 설비 마스터·부품 호환표·법령 인덱스는 Phase 2(A1 연동과 함께).
  '''
}

// ------------------------------------------------------------
// Enums (CONTRACT.md v3.0 §2 도메인 Enum — 정확히 이 문자열, 7종)
// ------------------------------------------------------------

Enum user_role {
  ENGINEER
  SAFETY_MANAGER
}

Enum work_request_status {
  DRAFT      [note: '작성 중 — 임시 저장, AI 미실행']
  AI_RUNNING [note: 'AI 검증중 — 3종 중 미완료 존재']
  AI_DONE    [note: '결과 확인 대기 — A1·A2·A3 전부 완료, 미제출']
  PENDING    [note: '승인 대기 — 안전관리자에게 제출됨']
  APPROVED   [note: '승인 — 종결']
  REJECTED   [note: '거절·보완 — 사유와 함께 반려, 재제출 가능']
}

Enum product_type {
  VALVE        [note: '밸브 — specJson.pressureRating']
  FITTING_TUBE [note: '피팅·튜브 — specJson.connectionStandard, material']
  REGULATOR    [note: '레귤레이터 — specJson.pressureRating']
  FILTER       [note: '필터 — specJson.substanceType']
  ETC          [note: '기타 — specJson.freeSpec']
}

Enum agent_code {
  A1 [note: '규격·호환(입력 스펙 기반)']
  A2 [note: '법령·조문']
  A3 [note: '안전서류(작업허가서·위험성평가)']
  // A4(벤더)는 Phase 2. CONTRACT §2 "에이전트 3종".
}

Enum agent_step_status {
  WAITING
  RUNNING
  DONE
  FAILED
}

Enum run_status {
  RUNNING
  DONE
  FAILED
}

Enum approval_decision {
  APPROVE
  REJECT
}

// ------------------------------------------------------------
// 1. users
// ------------------------------------------------------------

Table users {
  id            uuid         [pk, default: `gen_random_uuid()`]
  name          varchar(20)  [not null]
  email         varchar(120) [not null, unique, note: '로그인 ID. CONTRACT §4-1 signup']
  password_hash varchar(255) [not null, note: 'bcrypt 해시. 응답에 절대 포함 안 됨']
  role          user_role    [not null, note: '회원가입은 ENGINEER/SAFETY_MANAGER 만 선택 가능']
  created_at    timestamptz  [not null, default: `now()`]

  Note: '사용자. role 로 권한 분기 — ENGINEER 는 본인 요청만, SAFETY_MANAGER 는 PENDING 이상 전체(위반 시 403). 1:N work_requests(requester_id), approvals(approver_id)'
}

// ------------------------------------------------------------
// 2. work_requests (사실 계층)
// ------------------------------------------------------------

Table work_requests {
  id                  uuid                 [pk, default: `gen_random_uuid()`]
  request_no          varchar(20)          [not null, unique, note: '업무 식별자 WR-YYYYMMDD-NNN, 서버 채번(대리키 PK 는 id)']
  requester_id        uuid                 [not null, note: 'FK users.id']
  equipment           varchar(80)          [note: '설비 마스터 없음(Phase 2) — 자유 입력']
  line                varchar(50)
  substance            varchar(80)
  operating_condition jsonb                [note: '가변 구조 예: {"temperature":"상온","pressure":"3000 psi"}']
  product_name        varchar(120)
  product_type        product_type
  spec_json           jsonb                [note: 'productType 별 필수 키(CONTRACT §2 매핑표). 서버가 draft=false 시 검증(400 SPEC_SCHEMA_MISMATCH)']
  symptom             text
  site_memo           text
  engineer_note        text                [note: 'submit-approval 필수 조건 중 하나(422 SUBMIT_REQUIRED_FIELD_MISSING)']
  status               work_request_status [not null, default: 'DRAFT']
  created_at           timestamptz          [not null, default: `now()`]
  updated_at           timestamptz          [not null, default: `now()`]
  submitted_at         timestamptz          [note: 'PENDING 전이 시각(NULL = 미제출)']

  indexes {
    (requester_id, status) [name: 'idx_work_requests_requester_status']
    (status, submitted_at) [name: 'idx_work_requests_status_submitted']
  }

  Note: '요청(사실 계층). 상태머신 DRAFT→AI_RUNNING→AI_DONE→PENDING→APPROVED|REJECTED(REJECTED 는 E_04 재진입→PENDING 재제출). equipment/line/substance 등 업무 컬럼은 DB NOT NULL 아님 — draft=false 조건부 검증은 서비스 계층. 1:N work_request_photos(최대 5, 앱 레벨), agent_runs(재실행), approvals(append-only)'
}

Table work_request_photos {
  id               uuid        [pk, default: `gen_random_uuid()`]
  work_request_id  uuid        [not null, note: 'FK work_requests.id']
  file_name        varchar(255) [not null]
  storage_key      varchar(500) [not null, note: 'EXIF 제거 후 원본 저장 경로']
  thumbnail_key    varchar(500) [note: '320px 썸네일 저장 경로']
  size             int          [not null, note: '바이트. CHECK 0 < size <= 10MB(API #9 파일당 10MB 제한)']
  uploaded_at      timestamptz  [not null, default: `now()`]

  indexes {
    work_request_id [name: 'idx_photos_work_request']
  }

  Note: '작업요청 첨부 현장 사진. 요청당 최대 5장(409 PHOTO_LIMIT_EXCEEDED) — 앱 레벨 제약, DB CHECK 아님. jpg/png/webp 만 허용'
}

// ------------------------------------------------------------
// 3. agent_runs / agent_steps / agent_results (추론 계층, append-only)
// ------------------------------------------------------------

Table agent_runs {
  id              uuid        [pk, default: `gen_random_uuid()`]
  work_request_id uuid        [not null, note: 'FK work_requests.id']
  status          run_status  [not null, default: 'RUNNING']
  started_at      timestamptz [not null, default: `now()`]
  finished_at     timestamptz
  input_snapshot  jsonb       [note: '[제안, v3.0 BE 채택·구현됨] 실행 시점 work_request 스냅샷(설비·라인·물질·운전조건·제품명·유형·스펙·사진 메타) — 에이전트 입력 재현·감사용']
  ai_config_id    uuid        [note: '[제안, v3.0 BE 미채택] FK ai_configs.id, nullable — 실행에 쓰인 설정 버전 추적. 설정 격리는 core/config.py 환경변수 계층으로 대체 구현(erd.md §9)']

  Note: '에이전트 실행 1회. append-only — 재실행 시 새 행 추가(work_requests 1:N). 1:N agent_steps(고정 3), agent_results(고정 3)'
}

Table agent_steps {
  id            uuid              [pk, default: `gen_random_uuid()`]
  run_id        uuid              [not null, note: 'FK agent_runs.id']
  agent_code    agent_code        [not null]
  status        agent_step_status [not null, default: 'WAITING']
  message       varchar(200)      [note: '진행 메시지']
  error_message text              [note: 'FAILED 시 상세. step 실패해도 폴링 응답 HTTP 는 200 유지']
  started_at    timestamptz
  finished_at   timestamptz

  indexes {
    (run_id, agent_code) [unique, name: 'uq_agent_steps_run_agent']
  }

  Note: 'run 1건당 A1/A2/A3 고정 3행(uq_agent_steps_run_agent 로 중복 방지). GET /agent-runs/{runId} 폴링 응답 원본(pollIntervalMs=2500, 서버 제공)'
}

Table agent_results {
  id            uuid        [pk, default: `gen_random_uuid()`]
  run_id        uuid        [not null, note: 'FK agent_runs.id']
  agent_code    agent_code  [not null]
  payload_json  jsonb       [not null, default: '{}', note: 'A1/A2(항목형) {"items":[{itemId,text,edited}]} · A3(문서형) {"documents":[{docId,type,name,content,edited}]}']
  edited        boolean     [not null, default: false]
  updated_at    timestamptz [not null, default: `now()`]
  original_json jsonb       [note: '[제안] 에이전트 원본 결과(첫 산출 시점) 보존 — edited=true 만으로는 무엇이 바뀌었는지 알 수 없어 diff 표시에 필요']

  indexes {
    (run_id, agent_code) [unique, name: 'uq_agent_results_run_agent']
  }

  Note: 'run 1건당 A1/A2/A3 고정 3행. PATCH /agent-results/{id} 는 전체 치환(PUT-like) — 배열에 없는 기존 itemId 삭제, itemId 없이 오면 신규 추가(서버 채번). PENDING/APPROVED 상태면 409 RESULT_LOCKED'
}

// ------------------------------------------------------------
// 4. approvals (행동 계층, append-only)
// ------------------------------------------------------------

Table approvals {
  id              uuid              [pk, default: `gen_random_uuid()`]
  work_request_id uuid              [not null, note: 'FK work_requests.id']
  approver_id     uuid              [not null, note: 'FK users.id — SAFETY_MANAGER 만(403 FORBIDDEN_ROLE)']
  decision        approval_decision [not null]
  reason          text              [note: 'REJECT 시 10자 이상 필수(400 REJECT_REASON_REQUIRED) — 앱 레벨 검증, DB CHECK 아님. APPROVE 는 선택']
  reason_category varchar(30)       [note: '자유 입력 vs 고정 enum 은 팀 미확정(CONTRACT §8-6) — varchar 로 우선 반영']
  decided_at      timestamptz       [not null, default: `now()`]

  indexes {
    (work_request_id, decided_at) [name: 'idx_approvals_wr_decided']
    decided_at [name: 'idx_approvals_decided_at']
  }

  Note: '사람의 결정. append-only — 재제출 후 재결정 시 새 행 추가, 직전 이력 보존(work_requests 1:N). SAFETY_MANAGER 만, PENDING 아니면 409 NOT_PENDING, 이미 결정됐으면 409 ALREADY_DECIDED. 체크리스트 blocking 없음 — 승인은 사유 없이 즉시, 거절만 사유 필수'
}

// ------------------------------------------------------------
// 5. [제안] ai_configs — v3.0 BE 는 이 테이블을 만들지 않았다. Security & Config Isolation 을
//    테이블이 아니라 설정 계층(backend/app/core/config.py)으로 구현했다: AI_PROVIDER/EGRESS_ALLOWED
//    환경변수 + validate_egress() 가 OPENAI/AX_PLATFORM 인데 egress 미허용이면 기동을 막는다(fail-fast,
//    v1.0 의 런타임 409 보다 강함). 단일 테넌트 PoC 에서는 이쪽이 더 나은 설계 — 멀티테넌트로
//    확장돼 테넌트별 설정이 필요해지면 이 [제안] 테이블로 승격한다. 참고용으로 DDL 에 남겨 둔다.
// ------------------------------------------------------------

Table ai_configs {
  id             uuid         [pk, default: `gen_random_uuid()`]
  agent_code     agent_code   [not null]
  provider       varchar(20)  [not null, default: 'MOCK', note: 'MOCK | LOCAL_LLM | OPENAI — CONTRACT 7종 Enum 에 없어 ENUM 대신 VARCHAR+CHECK']
  model_name     varchar(100)
  prompt_version varchar(60)
  temperature    decimal(3,2)
  max_tokens     int
  egress_allowed boolean      [not null, default: false, note: 'API 키는 여기 두지 않는다(환경변수) — CONTRACT §5']
  is_active      boolean      [not null, default: true]

  indexes {
    (agent_code) [unique, name: 'uq_ai_configs_active_agent', note: '부분 유니크 UNIQUE(agent_code) WHERE is_active — dbdiagram 는 WHERE 절 미지원이라 DDL(schema_postgres.sql)에서 partial index 로 구현']
  }

  Note: '[제안] 에이전트별 모델·프롬프트 설정. agent_code 당 활성(is_active) 설정은 1개만(부분 유니크). agent_runs.ai_config_id 가 참조(1:N, 선택)'
}

// ------------------------------------------------------------
// Ref (FK) — 전부 1:N (CONTRACT §5 "관계" 8개). N:M 없음(팀 ERD 명시, Phase 2)
// ------------------------------------------------------------

Ref fk_work_requests_requester: work_requests.requester_id > users.id
Ref fk_approvals_approver:      approvals.approver_id      > users.id

Ref fk_photos_work_request: work_request_photos.work_request_id > work_requests.id
Ref fk_agent_runs_work_request: agent_runs.work_request_id       > work_requests.id
Ref fk_approvals_work_request:  approvals.work_request_id        > work_requests.id

Ref fk_agent_steps_run:   agent_steps.run_id   > agent_runs.id
Ref fk_agent_results_run: agent_results.run_id > agent_runs.id

Ref fk_agent_runs_ai_config: agent_runs.ai_config_id > ai_configs.id  // [제안] nullable

// ------------------------------------------------------------
// 그룹
// ------------------------------------------------------------

TableGroup 사용자 {
  users
}

TableGroup 요청_사실 {
  work_requests
  work_request_photos
}

TableGroup 에이전트_산출 {
  agent_runs
  agent_steps
  agent_results
}

TableGroup 결정 {
  approvals
}

TableGroup 설정 {
  ai_configs
}

// ------------------------------------------------------------
// 관계 요약 (CONTRACT §5 "관계 (전부 1:N)" 원문 8개)
//   users → work_requests(requester_id)
//   users → approvals(approver_id)
//   work_requests → work_request_photos (최대 5)
//   work_requests → agent_runs (재실행)
//   work_requests → approvals (append-only)
//   agent_runs → agent_steps (고정 3)
//   agent_runs → agent_results (고정 3)
//   ai_configs → agent_runs
//
// N:M 은 이번 범위에 없다(팀 ERD 명시). 법령 마스터·설비 마스터·호환표는 Phase 2.
// 루브릭 "1:N, N:M 관계" 요구 대비 Phase 2 예비 N:M 설계는 erd.md 참조.
// ------------------------------------------------------------
